# LAST-Plus

./: .gitignore  Alignment.cc  Alignment.hh  AlignmentWrite.cc  Alphabet.cc  Alphabet.hh  CMakeLists.txt  CyclicSubsetSeed.cc  CyclicSubsetSeed.hh  DiagonalTable.hh  GappedXdropAligner3frame.cc  GeneticCode.cc  GeneticCode.hh  LambdaCalculator.cc  LambdaCalculator.hh  LastEvaluer.cc  LastEvaluer.hh  LastalArguments.cc  LastalArguments.hh  LastdbArguments.cc  LastdbArguments.hh  LastexArguments.cc  Makefile  Mmap.hh  MultiSequence.cc  MultiSequence.hh  MultiSequenceUser.cc  MultiSequenceUser.hh  README.md  ScoreMatrix.cc  ScoreMatrix.hh  SegmentPair.hh  SubsetSuffixArray.cc  SubsetSuffixArray.hh  SubsetSuffixArraySort.cc  SubsetSuffixArrayUser.cc  SubsetSuffixArrayUser.hh  VectorOrMmap.hh  a  externalsort.cc  (+32 more)
TestData/: AA1.faa  AA2.faa  DNA1.fasta  DNA2.fasta  T.faa  db.bck  db.des  db.prj  db.sds  db.ssp  db.suf  db.tis  test.faa
alp/: njn_approx.hpp  njn_doubletype.hpp  njn_dynprogprob.cpp  njn_dynprogprob.hpp  njn_dynprogproblim.cpp  njn_dynprogproblim.hpp  njn_dynprogprobproto.cpp  njn_dynprogprobproto.hpp  njn_function.hpp  njn_integer.hpp  njn_ioutil.cpp  njn_ioutil.hpp  njn_localmaxstat.cpp  njn_localmaxstat.hpp  njn_localmaxstatmatrix.cpp  njn_localmaxstatmatrix.hpp  njn_localmaxstatutil.cpp  njn_localmaxstatutil.hpp  njn_matrix.hpp  njn_memutil.hpp  njn_random.cpp  njn_random.hpp  njn_root.hpp  njn_uniform.hpp  njn_vector.hpp  sls_alignment_evaluer.cpp  sls_alignment_evaluer.hpp  sls_alp.cpp  sls_alp.hpp  sls_alp_data.cpp  sls_alp_data.hpp  sls_alp_regression.cpp  sls_alp_regression.hpp  sls_alp_sim.cpp  sls_alp_sim.hpp  sls_basic.cpp  sls_basic.hpp  sls_falp_alignment_evaluer.cpp  sls_falp_alignment_evaluer.hpp  sls_fsa1.cpp  (+10 more)
gumbel_params/: mcf_local_alignment_evaluer.cpp  mcf_local_alignment_evaluer.hpp  njn_approx.hpp  njn_doubletype.hpp  njn_dynprogprob.cpp  njn_dynprogprob.hpp  njn_dynprogproblim.cpp  njn_dynprogproblim.hpp  njn_dynprogprobproto.cpp  njn_dynprogprobproto.hpp  njn_function.hpp  njn_integer.hpp  njn_ioutil.cpp  njn_ioutil.hpp  njn_localmaxstat.cpp  njn_localmaxstat.hpp  njn_localmaxstatmatrix.cpp  njn_localmaxstatmatrix.hpp  njn_localmaxstatutil.cpp  njn_localmaxstatutil.hpp  njn_matrix.cpp  njn_matrix.hpp  njn_memutil.hpp  njn_root.hpp  njn_vector.hpp  sls_alp.cpp  sls_alp.hpp  sls_alp_data.cpp  sls_alp_data.hpp  sls_alp_regression.cpp  sls_alp_regression.hpp  sls_alp_sim.cpp  sls_alp_sim.hpp  sls_normal_distr_array.hpp  sls_pvalues.cpp  sls_pvalues.hpp
split/: cbrc_split_aligner.cc  last-split.cc
src/: Alignment.hh  AlignmentWrite.cc  CyclicSubsetSeed.cc  DiagonalTable.hh  GappedXdropAligner.cc  GappedXdropAligner3frame.cc  LastalArguments.cc  LastalArguments.hh  LastdbArguments.cc  LastexArguments.cc  LastexArguments.hh  Mmap.hh  MultiSequence.hh  ScoreMatrixRow.hh  SubsetSuffixArray.hh  SubsetSuffixArraySort.cc  externalsort.hh  fileMap.cc  lastal.cc  lastal.hh  lastex.hh  linereader.cc  lubksb.hh  nrutil.cc  nrutil.hh  tempfiles.cc  tempfiles.hh  utilities.cc  utilities.hh  utils.cc  utils.hh
